Add light-mode and inputs event

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="box-style-img">
           <h4>IMAGEN</h4>
           <div>
-            <label>URL <input id="url" type="url" name="url" /></label>
+            <label>URL <input id="url" type="url" name="url" placeholder="Colocar URL"/></label>
           </div>
           <!-- DIV COLOR DE FONDO Y OPCIONES DE SELECCION -->
           <h5>Fondo</h5>
@@ -193,7 +193,7 @@
           </div>
           <div>
             <label>
-              <input id="check" type="checkbox" />
+              <input id="check-sup" type="checkbox" />
               Sin texto superior</label
             >
           </div>
@@ -204,7 +204,7 @@
           </div>
           <div>
             <label>
-              <input id="check" type="checkbox" />
+              <input id="check-inf" type="checkbox" />
               Sin texto Inferior</label
             >
           </div>
@@ -234,12 +234,12 @@
               <h5>Color</h5>
               <div class="txt-FC">
                 <input
-                  id="bkg-color"
+                  id="bkg-color-txt"
                   type="color"
                   name="color"
                   value="#ffffff"
                 />
-                <span>#0000</span>
+                <span id="hexa-txt">#0000</span>
               </div>
             </div>
 
@@ -247,12 +247,12 @@
               <h5>Fondo</h5>
               <div class="txt-FC">
                 <input
-                  id="bkg-color"
+                  id="bkg-color-fondo"
                   type="color"
                   name="color"
                   value="#ffffff"
                 />
-                <span>#0000</span>
+                <span id="hexa-fondo">#0000</span>
               </div>
             </div>
           </div>
