--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <!-- BOX MEME - PRINCIPAL-->
       <section class="box-meme">
         <div class="container-box" id="container-box">
-          <div class="top-text"><p id="top-text">TOP TEXT</p></div>
-
-          <div class="box" ></div>
-          <div class="bottom-text"><p id="bottom-text">BOTTOM TEXT</p></div>
+          <div class="box">
+            <div class="top-text"><p id="top-text">TOP TEXT</p></div>
+            <div class="bottom-text"><p id="bottom-text">BOTTOM TEXT</p></div>
+          </div>
         </div>
 
         <button id="download-meme">
@@ -61,7 +61,10 @@
         <div class="box-style-img">
           <h4>IMAGEN</h4>
           <div>
-            <label>URL <input id="url" type="url" name="url" placeholder="Colocar URL"/></label>
+            <label
+              >URL
+              <input id="url" type="url" name="url" placeholder="Colocar URL"
+            /></label>
           </div>
           <!-- DIV COLOR DE FONDO Y OPCIONES DE SELECCION -->
           <h5>Fondo</h5>
@@ -70,15 +73,15 @@
               <input id="bkg-color" type="color" name="color" value="#ffffff" />
               <span id="hexacolor">#0000</span>
             </div>
-
+            <!-- mix-blen-mode - https://developer.mozilla.org/ -->
             <div>
               <select class="bkg-select" name="opciones">
-                <option>Ninguna</option>
-                <option>Aclarar</option>
-                <option>Oscurecer</option>
-                <option>Diferencia</option>
-                <option>Luminosidad</option>
-                <option>Multiplicar</option>
+                <option value="unset">Ninguna</option>
+                <option value="lighten">Aclarar</option>
+                <option value="darken">Oscurecer</option>
+                <option value="difference">Diferencia</option>
+                <option value="luminosity">Luminosidad</option>
+                <option value="multiply">Multiplicar</option>
               </select>
             </div>
           </div>
@@ -95,86 +98,84 @@
               value="1"
               step="0.1"
             />
-
             <label for="opacity">Opacidad</label>
             <input
               id="opacity"
               type="range"
               name="range"
               min="0"
-              max=""
+              max="1"
               value="1"
               step="0.1"
             />
-
             <label for="contrast">Contraste</label>
             <input
               id="contrast"
               type="range"
               name="range"
               min="0"
-              max="5"
-              step="0"
-              value="0"
+              max="1"
+              step="0.1"
+              value="1"
             />
-
             <label for="blur">Desenfoque</label>
             <input
               id="blur"
               type="range"
               name="range"
               min="0"
-              max="5"
+              max="100"
+              step="1"
               value="0"
             />
-
             <label for="grayscale">Escala de Grises</label>
             <input
               id="grayscale"
               type="range"
               name="range"
               min="0"
-              max="5"
+              max="1"
+              step="0.1"
               value="0"
             />
-
             <label for="sepia">Sepia</label>
             <input
               id="sepia"
               type="range"
               name="range"
               min="0"
-              max="5"
+              max="1"
+              step="0.1"
               value="0"
             />
-
             <label for="hue">HUE</label>
             <input
               id="hue"
               type="range"
               name="range"
               min="0"
-              max="5"
+              max="360"
+              step="0.1"
               value="0"
             />
-
-            <label for="saturated">Saturado</label>
+            <label for="saturate">Saturado</label>
             <input
-              id="saturated"
+              id="saturate"
               type="range"
               name="range"
               min="0"
-              max="5"
+              max="1"
+              step="0.1"
               value="0"
             />
-
-            <label for="negative">Negativo</label>
+            <label for="invert">Negativo</label>
             <input
-              id="negative"
+              id="invert"
               type="range"
               name="range"
               min="0"
-              max="5"
+              max="1"
+              step="0.1"
               value="0"
             />
           </div>
@@ -188,7 +189,8 @@
           <!-- INPUT TEXTO SUPERIOR E INFERIOR -->
           <div>
             <label
-              >Superior <input id="top" type="text" name="Top Text" value="Top Text"
+              >Superior
+              <input id="top" type="text" name="Top Text" value="Top Text"
             /></label>
           </div>
           <div>
@@ -199,7 +201,12 @@
           </div>
           <div>
             <label
-              >Inferior <input id="bottom" type="text" name="Bottom Text" value="Bottom Text"
+              >Inferior
+              <input
+                id="bottom"
+                type="text"
+                name="Bottom Text"
+                value="Bottom Text"
             /></label>
           </div>
           <div>
@@ -212,20 +219,28 @@
           <div>
             <h5>Fuentes</h5>
             <div>
-              <select class="bkg-select" name="fuentes">
-                <option>Arial</option>
-                <option>Arial Black</option>
-                <option>American Typewriter</option>
-                <option>Andale Mono</option>
-                <option>Comic sans MS</option>
-                <option>Verdana</option>
+              <select class="bkg-select" id="font-option" name="fuentes">
+                <option value="Arial">Arial</option>
+                <option value="Arial Black">Arial Black</option>
+                <option value="American Typerwriter">
+                  American Typewriter
+                </option>
+                <option value="Andale Mono">Andale Mono</option>
+                <option value="Comic Sans MS">Comic sans MS</option>
+                <option value="Verdana">Verdana</option>
               </select>
             </div>
             <div>
               <input id="size-font" type="number" min="10" max="50" />
-              <button><i class="fa-solid fa-align-right"></i></button>
-              <button><i class="fa-solid fa-align-center"></i></button>
-              <button><i class="fa-solid fa-align-left"></i></button>
+              <button>
+                <i id="align-right" class="fa-solid fa-align-right"></i>
+              </button>
+              <button>
+                <i id="align-center" class="fa-solid fa-align-center"></i>
+              </button>
+              <button>
+                <i id="align-left" class="fa-solid fa-align-left"></i>
+              </button>
             </div>
           </div>
           <!-- DIV COLOR DE FONDO Y DE TEXTO -->
@@ -257,36 +272,39 @@
             </div>
           </div>
           <div>
-            <label><input id="yes" type="checkbox" /> Fondo transparente</label>
+            <label
+              ><input id="bkg-y-n" type="checkbox" /> Fondo transparente</label
+            >
           </div>
           <!-- CONTORNO -->
           <div class="outline">
             <h5>Contorno</h5>
-            <button>Ninguno</button>
-            <button>Claro</button>
-            <button>Oscuro</button>
+            <button id="none-outline">Ninguno</button>
+            <button id="light-outline">Claro</button>
+            <button id="dark-outline">Oscuro</button>
           </div>
           <!-- ESPACIADO E INTERLINEADO -->
           <label>
             Espaciado
             <input
-              id="line-spacing"
+              id="letter-spacing"
               type="number"
-              min="10"
-              max="50"
-              value="10"
+              min="5"
+              max="25"
+              value="5"
             />
           </label>
-          <label>
+          <div>
             Interlineado
-            <input
-              id="line-spacing"
-              type="number"
-              min="10"
-              max="50"
-              value="10"
-            />
-          </label>
+            <select name="interlineado" id="line-height">
+              <option value="0.8">0.8</option>
+              <option value="1">1</option>
+              <option value="1.2">1.2</option>
+              <option value="1.5">1.5</option>
+              <option value="2">2</option>
+              <option value="2.5">2.5</option>
+            </select>
+          </div>
         </div>
       </aside>
     </main>
