Add xmark y readme

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <aside class="style-box">
         <!-- ESTILOS DE LA IMAGEN -->
         <div class="box-style-img">
+          <button class="close-img-box" id="close-img-box">
+            <i class="fa-sharp fa-solid fa-xmark"></i>
+          </button>
           <h4>IMAGEN</h4>
           <div>
             <label
@@ -185,6 +188,9 @@
       <!-- BARRA LATERAL TEXTO -->
       <aside class="style-box-txt">
         <div class="box-style-txt">
+          <button class="close-txt-box" id="close-txt-box">
+            <i class="fa-sharp fa-solid fa-xmark"></i>
+          </button>
           <h4>TEXTO</h4>
           <!-- INPUT TEXTO SUPERIOR E INFERIOR -->
           <div>
